--- a/static/sass/UI/Modal.sass
+++ b/static/sass/UI/Modal.sass
@@ -32,7 +32,7 @@
 		position: relative
 
 .MASAS-modal
-	position: fixed
+	position: absolute
 	top: 0
 	bottom: $phone-footer-height
 	left: 0
